5498.	[test]		The --with-gperftools-profiler configure option was
			removed. [GL !4045]

5497.	[placeholder]

5496.	[bug]		The rate limiter needs to hold a reference to its task.
			[GL #2081]

5495.	[bug]		With query minimization enabled, named failed to
			resolve ip6.arpa. names that had more labels after the
			IPv6 part. [GL #1847]

5494.	[bug]		Silence the EPROTO syslog message on older systems.
			[GL #1928]

5493.	[bug]		Fix off-by-one error when calculating new hashtable
			size. [GL #2104]

5492.	[bug]		Tighten LOC parsing to reject period and/or m as a
			value.  Correct handling of negative altitudes which
			are not whole metres.  [GL #2074]

5491.	[bug]		rbtversion->glue_table_size could be read without the
			appropriate lock being held. [GL #2080]

5490.	[func]		Refactor the readline support to use pkg-config and
			add support for editline library. [GL !3942]

5489.	[bug]		Named failed to reject some invalid records resulting
			in records that, after being printed, could not be
			loaded or would result in DNSSEC validation failures
			when re-read from zone files as the wire format
			differed.  The covered records records are: CERT,
			IPSECKEY, NSEC3, NSEC3PARAM, NXT, SIG, TLSA, WKS, and
			X25. [GL !3953]

5488.	[bug]		nta needed to have a weak reference on view to prevent
			the view being deleted while nta tests are being
			performed. [GL #2067]

5487.	[cleanup]	Update managed keys log messages to be less confusing.
			[GL #2027]

5486.	[func]		Add 'rndc dnssec -checkds' command to tell named
			that the DS record has been published in the parent.
			[GL #1613]

	--- 9.17.4 released ---

5485.	[placeholder]

5484.	[func]		Expire zero TTL records quickly rather than using them
			for stale answers. [GL #1829]

5483.	[func]		Keeping "stale" answers in cache has been disabled by
			default and can be re-enabled with a new configuration
			option "stale-cache-enable". [GL #1712]
